web/graph/css/global.css
/* ... */
li.install a, li.installg a { background-image: url("../../img/actions/deploy.svg"); }
li.imaging a, li.imagingg a { background-image: url("../../img/actions/imaging.svg"); }
li.folder a, li.folderg a { background-image: url("../../img/actions/folderexplorer.svg"); }
li.urbackup a, li.urbackupg a { background-image: url("../../img/actions/backup.svg"); }
li.console a, li.consoleg a { background-image: url("../../img/actions/console.svg"); }
li.config a, li.configg a { background-image: url("../../img/actions/settings.svg"); }
li.quick a, li.quickg a { background-image: url("../../img/actions/quickaction.svg"); }
li.qrcode a, li.qrcodeg a { background-image: url("../../img/actions/qrcode.svg"); }
li.guaca a, li.guacag a { background-image: url("../../img/actions/control.svg"); }
li.monit a { background-image: url("../../img/actions/monitoring.svg"); }
li.display a, li.displayg a { background-image: url("../../img/actions/display.svg"); }
li.displaygroup a, li.displaygroupg a { background-image: url("../../img/actions/displaygroup.svg"); }
li.logfile a, li.logfileg a { background-image: url("../../img/actions/fileviewer.svg"); }
li.package a, li.packageg a { background-image: url("../../img/actions/packages.svg"); }
li.reconfiguregroup a, li.reconfiguregroupg a { background-image: url("../../img/actions/reconfiguregroup.svg"); }
li.stop a, li.stopg a { background-image: url("../../img/actions/stop.svg"); }
li.reload a, li.reloadg a { background-image: url("../../img/actions/reload.svg"); }
li.scan a, li.scang a { background-image: url("../../img/actions/scan.svg"); }
li.ban a, li.bang a { background-image: url("../../img/actions/ban.svg"); }
li.unban a, li.unbang a { background-image: url("../../img/actions/unban.svg"); }
li.donotupdate a, li.donotupdateg a { background-image: url("../../img/actions/donotupdate.svg"); }
li.updateall a, li.updateallg a { background-image: url("../../img/actions/updateall.svg"); }
li.updateone a, li.updateoneg a { background-image: url("../../img/actions/updateone.svg"); }
li.enableupdate a, li.enableupdateg a { background-image: url("../../img/actions/enable.svg"); }
li.disableupdate a, li.disableupdateg a { background-image: url("../../img/actions/disable.svg"); }
li.deleteprofile a, li.deleteprofileg a { background-image: url("../../img/actions/deleteprofile.svg"); }
li.infoupdate a, li.infoupdateg a { background-image: url("../../img/actions/info.svg"); }
li.helpupdate a, li.helpupdateg a { background-image: url("../../img/actions/help.svg"); }
li.pending a, li.pendingg a { background-image: url("../../img/actions/pending.svg"); }
li.history a, li.historyg a { background-image: url("../../img/actions/history.svg"); }
li.manageusers a, li.manageusersg a { background-image: url("../../img/actions/usergroup.svg"); }
li.edit a, li.editg a { background-image: url("../../img/actions/edit.svg"); }
li.delete a, li.deleteg a { background-image: url("../../img/actions/delete.svg"); }
li.download a, li.downloadg a { background-image: url("../../img/actions/download.svg"); }
li.add a { background-image: url("../../img/actions/add.svg"); }
li.remove a { background-image: url("../../img/actions/remove.svg"); }
li.audit a { background-image: url("../../img/actions/details.svg"); }
li.auditbymachine a { background-image: url("../../img/actions/auditbymachine.svg"); }
li.auditbyupdate a { background-image: url("../../img/actions/auditbyupdate.svg"); }
li.backup a { background-image: url("../../img/actions/backup.svg"); }
li.banupdate a { background-image: url("../../img/actions/banupdate.svg"); }
li.convergence a { background-image: url("../../img/actions/convergence.svg"); }
li.convergenceunin a { background-image: url("../../img/actions/convergenceunin.svg"); }
li.csv a { background-image: url("../../img/actions/csvexport.svg"); }
li.advanced a { background-image: url("../../img/actions/confitem.svg"); }
li.addbootmenu a { background-image: url("../../img/actions/addfile.svg"); }
li.delbootmenu a { background-image: url("../../img/actions/delfile.svg"); }
li.removebootmenu a { background-image: url("../../img/actions/delete.svg"); }
li.showbootmenu a { background-image: url("../../img/actions/show.svg"); }
li.createbootservice a { background-image: url("../../img/actions/transformfile.svg"); }
li.duplicatemaster a { background-image: url("../../img/actions/duplicate.svg"); }
li.duplicatescript a { background-image: url("../../img/actions/duplicate.svg"); }
li.editacl a { background-image: url("../../img/actions/key.svg"); }
li.groupshare a { background-image: url("../../img/actions/share.svg"); }
li.showtarget a { background-image: url("../../img/actions/info.svg"); }
li.approveupdate a { background-image: url("../../img/actions/deploy.svg"); }
li.start a { background-image: url("../../img/actions/play.svg"); }
li.restart a { background-image: url("../../img/actions/restart.svg"); }
li.unlist a { background-image: url("../../img/actions/unlist.svg"); }
li.up a { background-image: url("../../img/actions/up.svg"); }
li.down a { background-image: url("../../img/actions/down.svg"); }
li.ok a { background-image: url("../../img/other/yes.svg"); }
li.info a { background-image: url("../../img/common/info.png"); }
li.load a { background-image: url("../../img/common/loader_p.gif"); }
li.wait a { background-image: url("../../img/common/todo.png"); }
li.empty a { background-image: url("../../img/common/spacer.gif"); }

.user_container {
  padding-top: 40px;
}

#container .action {
  line-height: 18px;
}
/* ---------------------------------------- */
/* Tables                                  */
/* ---------------------------------------- */

#section table {
  width: 100%;
}

#section table.listinfos {
  border: none;
  margin: 15px 30px 15px 0px;
  border-radius: 9px;
  overflow: hidden;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
  border: 1px solid #e2e8f0;
}

#section table.listinfos thead tr {
  background: var(--color-primary) !important;
}
/* ... */

